# EmbedNexus

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PR_BODY_PHASE1.md  README.md  clippy.toml  deny.toml  plan.md  rust-toolchain.toml
.code/agents/0159f430-af43-4b79-9b47-50094f084feb/: error.txt
.code/agents/2069/: exec-call_t6w6MA8QhzZCywMjKfMGWAUv.txt
.code/agents/72ed0ad8-8b81-4229-952d-111707ba4586/: error.txt
.code/agents/a79cfbb8-31bc-4997-bf84-d8996cae8357/: result.txt
.codex/pr/100/: cargo-deny-findings.md  cargo-deny-summary.txt  ci-causes.json  ci-failures.json  ci-failures.txt  comments-issue.json  comments-review-comments.json  comments-summary.md  diff.patch  files.json  meta.json  noisy-files.txt  patch-suggestions.md  plan-headings.txt  reviews.json  sbom-findings.md  security-configs-heads.txt  stats.json  summary.txt  top-files-all.txt  top-files-collapsed.txt  top-files-filtered.txt  triage-checklist.md  triage-highlights.md  triage.md  workflow-uses.txt  workflows-heads.txt
.github/: dependabot.yml
.github/workflows/: ci-matrix.yml  ci.yml  codeql.yml  regenerate-fixtures.yml  regenerate-goldens.yml  security.yml
agent-reports/: watcher-tooling-report.md
clients/go/: README.md  client_test.go  go.mod
clients/node/: README.md
clients/node/__tests__/: client.spec.mjs
clients/python/: README.md
crates/governance-audit/: Cargo.toml
crates/governance-audit/src/: lib.rs
crates/governance-traceability/: Cargo.toml
crates/governance-traceability/src/: lib.rs
crates/ingestion-embedding/: Cargo.toml
crates/ingestion-embedding/src/: lib.rs
crates/ingestion-embedding/tests/: embedding.rs
crates/ingestion-manifest/: Cargo.toml
crates/ingestion-manifest/src/: lib.rs
crates/ingestion-manifest/tests/: manifest_emitter.rs
crates/ingestion-planning/: Cargo.toml
crates/ingestion-planning/src/: lib.rs
crates/ingestion-planning/tests/: archive_quota.rs
crates/ingestion-sanitization/: Cargo.toml
crates/ingestion-sanitization/src/: lib.rs
crates/ingestion-sanitization/tests/: sanitizer.rs
crates/ingestion-workspace/: Cargo.toml
crates/ingestion-workspace/src/: lib.rs
crates/ingestion-workspace/tests/: watcher_latency.rs
crates/runtime-policy/: Cargo.toml
crates/runtime-policy/src/: lib.rs
crates/runtime-router/: Cargo.toml
crates/runtime-router/src/: lib.rs
crates/runtime-transport-http/: Cargo.toml
crates/runtime-transport-http/src/: lib.rs
crates/runtime-transport-stdio/: Cargo.toml
crates/runtime-transport-stdio/src/: lib.rs
crates/runtime-transport-uds/: Cargo.toml
crates/runtime-transport-uds/src/: lib.rs
crates/storage-ledger/: Cargo.toml
crates/storage-ledger/src/: lib.rs
crates/storage-vector/: Cargo.toml
crates/storage-vector/src/: config.rs  error.rs  ledger.rs  lib.rs
crates/storage-vector/src/encryption/: aes_gcm.rs  mod.rs
crates/storage-vector/src/kms/: mod.rs
crates/storage-vector/src/store/: fs.rs  mod.rs
crates/storage-vector/tests/: aad_mismatch.rs  fs_replay_restore.rs  fs_roundtrip.rs  replay_ordering.rs  rotation.rs  roundtrip_encrypted.rs  roundtrip_plain.rs  tamper.rs  tamper_header.rs
docs/design/: encryption.md  ingestion.md  overview.md  traceability.md  transport.md  vector-store.md
docs/design/c4/: README.md
docs/implementation/: runtime-packaging-plan.md  runtime-phase-1.md
docs/integration/: client-plan.md  clients.md  ide-overview.md
docs/process/: doc-review.md  governance-log.md  governance.md  pr-release-checklist.md
docs/references/: sources.md
docs/roadmap/: phase2-tests.md
docs/security/: threat-model.md
docs/testing/: ci-coverage.md  fixtures-plan.md  scripts-implementation-plan.md  test-blueprints.md  test-matrix.md
docs/testing/templates/: archive-extraction-usage.md  encryption-tls-validation.md  watcher-latency-metrics.md
scripts/: Cargo.toml  README.md  __init__.py  archive_builder.rs  checksums.sh  collect_dpapi.ps1  fixture_packager.py  generate_encryption_toggles.py  manifest_replay_harness.rs  offline_transport_buffer.py  pre_pr_check.sh  record_fs_events.py  routing_matrix.py  sanitize_jsonl.py  sbom_merge.py  trace_capture.sh  verify_event_order.py  wsl_transport_proxy.ps1
scripts/tests/: archive_builder_cli.rs
scripts/transcripts/: normalize.py
scripts/wsl/: python-client.ps1
tests/: conftest.py  golden.sha256  test_fixture_packager.py  test_record_fs_events.py  test_routing_matrix.py  test_sanitize_jsonl.py  test_verify_event_order.py
tests/fixtures/: README.md
tests/fixtures/archives/: README.md  overflow-case.tar.zst  overflow-case.tar.zst.sha256  overflow-latency.tar.zst  overflow-latency.tar.zst.sha256  quota-latency.toml  quota-scenarios.toml
tests/fixtures/filesystem/: README.md  latency-window.yaml  mock-events.yaml
tests/fixtures/go/: README.md
tests/fixtures/ingestion/: README.md
tests/fixtures/node/: README.md
tests/fixtures/python/: README.md
tests/fixtures/routing/: README.md  latency-matrix.json  multi-repo-matrix.json
tests/fixtures/security/: README.md  encryption-latency.json  encryption-toggles.json  tls-config-matrix.yaml
tests/fixtures/shared/: README.md  bundle.json
tests/fixtures/transport/: README.md
tests/golden/: README.md  security.sha256
tests/golden/archives/: README.md  fuzzed-manifests.jsonl  fuzzed-manifests.jsonl.sha256  quota-throughput.jsonl  quota-throughput.jsonl.sha256
tests/golden/filesystem/: README.md
tests/golden/go/: http.json  http.transcript.json  stdio.json  stdio.transcript.json  tls.json  tls.transcript.json
tests/golden/ingestion/: README.md  manifest-replay.log.sha256
tests/golden/mcp/: README.md
tests/golden/node/: http.json  http.transcript.json  stdio.json  stdio.transcript.json  tls.json  tls.transcript.json
tests/golden/python/: http.json  http.transcript.json  (+4 more)
tests/python/: test_clients.py
tests/runtime_transport/: Cargo.toml
tests/runtime_transport/src/: lib.rs
tests/runtime_transport/tests/: adapters.rs  offline_queue.rs
tests/shell/: checksums.bats
(+97 files in other folders)
