[package]
name = "cursor-fixture-tools"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1"
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1"
tempfile = "3.10"

[[bin]]
name = "archive_builder"
path = "archive_builder.rs"

[[bin]]
name = "manifest_replay_harness"
path = "manifest_replay_harness.rs"
