[package]
name = "ingestion-manifest"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ingestion-embedding = { path = "../ingestion-embedding" }
ingestion-sanitization = { path = "../ingestion-sanitization" }
storage-ledger = { path = "../storage-ledger" }
storage-vector = { path = "../storage-vector" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
ingestion-planning = { path = "../ingestion-planning" }
serde_yaml.workspace = true
toml.workspace = true
