[package]
name = "runtime-transport-stdio"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
runtime-router = { path = "../runtime-router" }
base64.workspace = true
blake3.workspace = true
