[package]
name = "runtime-transport-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0"
runtime-router = { path = "../../crates/runtime-router" }
runtime-transport-http = { path = "../../crates/runtime-transport-http" }
runtime-transport-stdio = { path = "../../crates/runtime-transport-stdio" }
runtime-transport-uds = { path = "../../crates/runtime-transport-uds" }
serde_json = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
